--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,12 +5,21 @@
     <string name="vodka_button">Vodka</string>
     <string name="rum_button">Rum</string>
     <string name="gin_button">Gin</string>
-    <string name="brandy_button">Brandy</string>
+    <string name="other_button">Other</string>
     <string name="fav_button">Favorites</string>
+    <string name="vodka_btn_tag">vodka</string>
+    <string name="rum_btn_tag">rum</string>
+    <string name="gin_btn_tag">gin</string>
+    <string name="other_btn_tag">brandy/or/whisky/or/tequila</string>
 
     <!-- RECIPE LIST ACTIVITY -->
     <string name="add_fav_toast_txt">Added recipe to Favorites</string>
     <string name="rem_fav_toast_txt">Removed recipe from Favorites</string>
+
+    <!-- INFORMATION DIALOG -->
+    <string name="info_dialog_title">Hey! Did you know?</string>
+    <string name="info_dialog_message">By tapping and holding down a cocktail recipe in the list, you can add it to, or remove it from, your favorites.</string>
+    <string name="info_dialog_btn_txt">Got it!</string>
 
     <!-- SEARCH ACTIVITY -->
     <string name="search_hint">Search</string>
