--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="vodka_button">Vodka</string>
     <string name="rum_button">Rum</string>
     <string name="gin_button">Gin</string>
+    <string name="whiskey_button">Whiskey</string>
+    <string name="brandy_button">Brandy</string>
+    <string name="tequila_button">Tequila</string>
     <string name="other_button">Other</string>
     <string name="search_hint">Search</string>
 </resources>
